--- a/_posts/21-02-2016-who-i-am.markdown
+++ b/_posts/21-02-2016-who-i-am.markdown
@@ -6,7 +6,7 @@ description: A brief introduction.
 
 ## 1.	What's my job title and where do I work
 
-I am seven months into my NQT year, working at a very small secondary school in North Yorkshire as the only ICT/Computing specialist. I did my PGCE year in a very large school in West Yorkshire, but came back to live in the countryside. The school day is demanding, I'm learning something new every day and I'm striving to systemise the school year to make things a little bit easier next year. On joining the school, I also took responsibility for a developing leader role in which I develop and deploy small, whole-school systems. 
+I am in my RQT year, working at a very small (outstanding) secondary school in North Yorkshire as the only Computing specialist. I did my PGCE year in a very large school in West Yorkshire, but came back to live in the countryside. The school day is demanding, I'm learning something new every day and I'm striving to systemise the school year to make things a little bit easier next year. On joining the school, I also took responsibility for a developing leader role in which I develop and deploy small, whole-school systems. 
 
 ## 2.	What am I currently working on?
 Teaching, marking and planning are the big ones on the list at the moment. Controlled Assessments and marking policies are completely new to me, but I'm getting my head around it and things are getting smoother. 
